fix missing color wash

--- a/src/main/resources/scss/content/components/_view.scss
+++ b/src/main/resources/scss/content/components/_view.scss
@@ -70,7 +70,6 @@
 			font-size: 0.75rem;
 			padding: 0.4rem 4rem 0.4rem 0.5rem;
 			border-radius: 3px;
-			background: transparent;
 			@include transform(translate3d(-0.65rem, -0.35rem, 0));
 			//Debugging:
 			/*border: 1px solid;*/
